# A11yway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  WEB_DEMO_README.md  pyproject.toml  render.yaml  requirements-ai.txt  requirements-browser.txt  requirements-web.txt
a11yway/: __init__.py  main.py  web_app.py
docs/: AI_SCOUT_DESIGN.md  ARCHITECTURE.md  CAPABILITIES.md  CLI.md  COGNITIVE_ACCESSIBILITY.md  COMPONENT_TESTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENT_TESTING.md  EVALUATION_PLAN.md  MEDIA_TESTING.md  MOBILE_TESTING.md  MODULES.md  MULTILINGUAL_TESTING.md  PASSIVE_SECURITY.md  PRECISION_REGRESSION_2026_07_18.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PROJECT_BRIEF.md  RELEASE_CHECKLIST.md  REPORT_SCHEMA.md  ROADMAP.md  RULES.md  RUN_FIRST_EVALUATION_BATCH.md  SAFETY.md  SAMPLE_REPORT.md  SCREEN_READER_TESTING.md  WCAG22_COVERAGE.md  WCAG_2_2_COVERAGE.md  WORKFLOW_TESTING.md
examples/: cornell_human_review_anonymized.json  evaluation_batch_template.json  human_review_sample.json  human_review_schema.json  sample_announce_transcript.html  sample_announce_transcript_broken.html  sample_batch.json  sample_browser_batch.json  sample_dynamic_form.html  sample_form.html  sample_form_report.json  sample_indic_page.html  sample_indic_page_clean.html  sample_keyboard_trap.html  sample_keyboard_trap_fixed.html  sample_low_vision_batch.json  sample_low_vision_page.html  sample_report.json  sample_resource_page.html  sample_task_execution_batch.json  sample_task_execution_form.html  sample_task_execution_form_broken.html  sample_tasks.json  sample_wcag_structure.html  sample_wcag_structure_clean.html  sample_zoom_reflow.html  sample_zoom_reflow_fixed.html
reports/: announce_transcript_broken_report.html  announce_transcript_broken_report.json  announce_transcript_broken_report.md  announce_transcript_report.json  announce_transcript_report.md  ci_sample.sarif  ci_sample_junit.xml  (+36 more)
(+279 files in other folders)
